--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
             <li><a href="#text-intro" data-scroll>Nosotros</a></li>
             <li><a href="#mission-about" data-scroll>Mision/Vision</a></li>
             <li><a href="#why-us" data-scroll>Perfiles</a></li>
-			<li><a href="#" data-scroll>-</a></li>
-            <li><a href="#" data-scroll>-</a></li>
-			<li><a href="#" data-scroll>-</a></li>
-            <li><a href="#" data-scroll>-</a></li>
+			<li><a href="#works" data-scroll>Work</a></li>
+            <li><a href="#testimonials" data-scroll>Testimonials</a></li>
+			<li><a href="#price" data-scroll>Price</a></li>
+            <li><a href="#quote" data-scroll>Contact</a></li>
           </ul>
         </div>
       </div>
@@ -320,44 +320,35 @@
 	<!-- ========== Top News Section ===========
     ==========================================-->
 	
-	<div id="top-news">
-	    <div class="overlay">
-            <div class="container">
-		        <div class="row">
-				    <div id="news" class="news owl-carousel owl-theme">
-						<div class="item">
-                            <div class="col-md-10 col-md-offset-1">
-                                <div class="section-text text-center">
-					               <h3><strong class="color">WE LOVE BUILDING</strong> -  Donec pharetra at tempus auctor. Morbi consectetur, quam rutrum rhoncus suscipit, mauris ligula vulputate ante, eget auctor quam felis at turpis. In rhoncus non nibh id pellentesque. Sed eu libero nibh. Aliquam accumsan diam ac nulla suscipit mattis.
-						            <a href="#" class="arrow-link"><em>Read More</em><i class="fa fa-long-arrow-right"></i></a></h3>
-                                </div>	
-                            </div>
-					    </div>
-						<div class="item">
-                            <div class="col-md-10 col-md-offset-1">
-                                <div class="section-text text-center">
-					               <h3><strong class="color">SOCIAL IMPACT</strong> -  Aliquam accumsan diam ac nulla suscipit mattis. Phasellus id interdum neque. Phasellus nec pulvinar purus, vitae elementum velit. Etiam convallis, erat ac mattis ullamcorper, eros sem vehicula sem, non tempor erat sapien in ligula.
-						           <a href="#" class="arrow-link"><em>Read More</em><i class="fa fa-long-arrow-right"></i></a></h3>
-                                </div>	
-                            </div>
-					    </div>
-						<div class="item">
-                            <div class="col-md-10 col-md-offset-1">
-                                <div class="section-text text-center">
-					               <h3><strong class="color">NEW CAMPAIN</strong> -  Integer felis mauris, efficitur id lectus et, feugiat pulvinar ipsum. Mauris a tellus dui. Donec mi sapien, sagittis nec sagittis et, ullamcorper at diam. Fusce tempus justo luctus, scelerisque mauris nec, consequat leo, sit amet felis scelerisque iaculis.
-						           <a href="#" class="arrow-link"><em>Read More</em><i class="fa fa-long-arrow-right"></i></a></h3>
-                                </div>	
-                            </div>
-					    </div>
-					</div>
-				</div>
-            </div>
-        </div>
-	</div>
 
 	
-    <!-- =========== Services Section ============
-    ========================================== -->
-    
 
+	
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script type="text/javascript" src="asset/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/smooth-scroll.js"></script>
+    <script type="text/javascript" src="js/jquery.countTo.js"></script>
+    <script type="text/javascript" src="js/owl.carousel.js"></script>
+    <script type="text/javascript" src="js/wow.min.js"></script>
+	<script type="text/javascript" src="js/retina.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+	
+    <script type="text/javascript"></script>
+	        <script>
+            $('.timer').countTo();
+              </script>
+	
+	
+    <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
+			  
+	<script src="js/smooth-scroll.js"></script>		  
+			  <script>
+              smoothScroll.init();
+              </script>
+
+  </body>
 </html>
